force-app/main/default/objects/SMS_DynamoDB_Config__c/SMS_DynamoDB_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SMS DynamoDB Config</label>
</CustomObject>