force-app/main/default/objects/SMS_DynamoDB_Config__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>Data type of the hash key</description>
    <label>Data Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>