force-app/main/default/objects/SMS_DynamoDB_Config__c/fields/Hash_Key__c.field-meta.xml
<CustomField>
    <fullName>Hash_Key__c</fullName>
    <description>Name of the attribute that is used for filtering data in DynamoDB usually the MRIS subscription id</description>
    <label>Hash Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>