force-app/main/default/objects/SMS_DynamoDB_Config__c/fields/Secondary_Index__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Index__c</fullName>
    <label>Secondary Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>