force-app/main/default/objects/SMS_DynamoDB_Config__c/fields/Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Name__c</fullName>
    <label>Table Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>