force-app/main/default/objects/SMS_DynamoDB_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Table_Name__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Hash_Key__c</columns>
    <columns>Secondary_Index__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>